2017-12-22  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* danda: 42155: Completion/Unix/Command/_ssh: various
	improvements for OpenSSH.

	* 42152: Src/exec.c, Src/zsh.h: improved line numbering for
	functions (in particular anonymous functions) defined inside
	others, also flag for anonymous functions.

2017-12-20  Peter Stephenson  <p.stephenson@samsung.com>

	* dana: 42145: Src/Zle/computil.c, Test/Y03arguments.ztst: fix
	for completion option arguments.

2017-12-20  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 42146: Src/hashtable.c, Test/A02alias.ztst: type -w +=
	global aliases

	* 42138: Completion/Unix/Command/_git: _git-revert: Complete
	recent commits first.

	* Stephane (rebased by Mikael): users/13148, workers/42060:
	Src/exec.c: Abort the command line when replying "[n] No" to
	the RM_STAR_SILENT prompt.

2017-12-20  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 42143: Completion/Unix/Type/_object_files: fix a pattern for
	matching object files

2017-12-18  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 42412: Src/Zle/zle_word.c: fix a bug in 42116. Also fix a few
	widgets which were calling wrong function when negative numeric
	argument was given.

2017-12-18  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 42116: Src/Zle/zle_word.c, Src/Zle/textobjects.c, Src/Zle/zle.h,
	Test/X02zlevi.ztst: multibyte support for Zle vi-mode word motion

2017-12-15  Peter Stephenson  <p.stephenson@samsung.com>

	* 42123 (tweaked further): Src/exec.c: need to take account of
	Dash when comparing functions names for autoloading.

2017-12-14  Peter Stephenson  <p.stephenson@samsung.com>

	* dana: 42119: Doc/zsh/params.yo, Src/jobs.c,
	Test/A01grammar.ztst: add millisecond and microsecond options to
	TIMEFMT variable.

2017-12-13  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Matthew Martin: 42113: Completion/BSD/Command/_bsd_pkg,
	Completion/BSD/Type/_fbsd_architectures,
	Completion/BSD/Type/_nbsd_architectures,